testdata/baselines/reference/submodule/conformance/jsdocTemplateTag2.errors.txt
github17339.js(4,13): error TS2304: Cannot find name 'T'.
github17339.js(5,15): error TS2304: Cannot find name 'T'.


==== github17339.js (2 errors) ====
    var obj = {
    	/**
    	 * @template T
    	 * @param {T} a
    	           ~
!!! error TS2304: Cannot find name 'T'.
    	 * @returns {T}
    	             ~
!!! error TS2304: Cannot find name 'T'.
    	 */
    	x: function (a) {
    		return a;
    	},
    };
    